fix `image loader` not scaling on mobile

--- a/src/frontend/common/components/wrappers/image/Image.module.css
+++ b/src/frontend/common/components/wrappers/image/Image.module.css
@@ -4,6 +4,9 @@
   left: 0;
   width: 100%;
   height: 100%;
+  max-width: 100%;
+  max-height: 100%;
+  box-sizing: border-box;
 
   background: linear-gradient(125deg, #5c5900, #b33062, #1e8ab1, #25a788);
   background-size: 400% 400%;
